# dev_CrowFunding

./: .gitignore  manage.py  pyproject.toml
campania/: admin.py  apps.py
campania/models/: __init__.py  campania.py  categoria.py
crowfunding/: asgi.py  settings.py  urls.py  wsgi.py
