[tool.poetry]
name = "crowfunding"
version = "0.1.0"
description = "Aplicacion Weg Django para CrowFunding (financiación colectiva)"
authors = ["diego1313 <diegoyanez13@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
